@@ -433,49 +433,33 @@ static int edgex_device_runget
 (
   edgex_device_service *svc,
   edgex_device *dev,
-  const edgex_cmdinfo *commandinfo,
-  const char *querystr,
+  const edgex_cmdinfo *cmdinfo,
+  const edgex_nvpairs *qparams,
   edgex_event_cooked **reply
 )
 {
-  edgex_device_commandrequest *requests;
   edgex_device_commandresult *results;
+
   int retcode = MHD_HTTP_INTERNAL_SERVER_ERROR;
 
-  for (int i = 0; i < commandinfo->nreqs; i++)
+  for (int i = 0; i < cmdinfo->nreqs; i++)
   {
-    if (!commandinfo->pvals[i]->readable)
+    if (!cmdinfo->pvals[i]->readable)
     {
-      iot_log_error (svc->logger, "Attempt to read unreadable value %s", commandinfo->reqs[i].resname);
+      iot_log_error (svc->logger, "Attempt to read unreadable value %s", cmdinfo->reqs[i].resname);
       return MHD_HTTP_METHOD_NOT_ALLOWED;
     }
   }
 
-  results = calloc (commandinfo->nreqs, sizeof (edgex_device_commandresult));
-  if (querystr)
-  {
-    size_t sz = sizeof (edgex_device_commandrequest) * commandinfo->nreqs;
-    requests = malloc (sz);
-    memcpy (requests, commandinfo->reqs, sz);
-    for (int i = 0; i < commandinfo->nreqs; i++)
-    {
-      edgex_nvpairs *pair = malloc (sizeof (edgex_nvpairs));
-      pair->name = "urlRawQuery";
-      pair->value = (char *)querystr;
-      pair->next = (edgex_nvpairs *)requests[i].attributes;
-      requests[i].attributes = pair;
-    }
-  }
-  else
-  {
-    requests = commandinfo->reqs;
-  }
+  results = calloc (cmdinfo->nreqs, sizeof (edgex_device_commandresult));
 
-  if (svc->userfns.gethandler (svc->userdata, dev->name, dev->protocols, commandinfo->nreqs, requests, results))
+  if
+  (
+    svc->userfns.gethandler (svc->userdata, dev->name, dev->protocols, cmdinfo->nreqs, cmdinfo->reqs, results, qparams)
+  )
   {
     edgex_error err = EDGEX_OK;
-    *reply = edgex_data_process_event
-      (dev->name, commandinfo, results, svc->config.device.datatransform);
+    *reply = edgex_data_process_event (dev->name, cmdinfo, results, svc->config.device.datatransform);
 
     if (*reply)
     {
@@ -485,25 +469,16 @@ static int edgex_device_runget
     else
     {
       iot_log_error (svc->logger, "Assertion failed for device %s. Disabling.", dev->name);
-      edgex_metadata_client_set_device_opstate
-        (svc->logger, &svc->config.endpoints, dev->id, DISABLED, &err);
+      edgex_metadata_client_set_device_opstate (svc->logger, &svc->config.endpoints, dev->id, DISABLED, &err);
     }
   }
   else
   {
-    iot_log_error
-      (svc->logger, "Driver for %s failed on GET", dev->name);
+    iot_log_error (svc->logger, "Driver for %s failed on GET", dev->name);
   }
 
-  edgex_device_commandresult_free (results, commandinfo->nreqs);
-  if (querystr)
-  {
-    for (int i = 0; i < commandinfo->nreqs; i++)
-    {
-      free ((edgex_nvpairs *)requests[i].attributes);
-    }
-    free (requests);
-  }
+  edgex_device_commandresult_free (results, cmdinfo->nreqs);
+
   return retcode;
 }
 
@@ -512,7 +487,7 @@ static int runOne
   edgex_device_service *svc,
   edgex_device *dev,
   const edgex_cmdinfo *command,
-  const char *querystr,
+  const edgex_nvpairs *qparams,
   const char *upload_data,
   size_t upload_data_size,
   edgex_event_cooked **reply
@@ -553,7 +528,7 @@ static int runOne
 
   if (command->isget)
   {
-    return edgex_device_runget (svc, dev, command, querystr, reply);
+    return edgex_device_runget (svc, dev, command, qparams, reply);
   }
   else
   {
@@ -578,7 +553,7 @@ static int allCommand
   edgex_device_service *svc,
   const char *cmd,
   edgex_http_method method,
-  const char *querystr,
+  const edgex_nvpairs *qparams,
   const char *upload_data,
   size_t upload_data_size,
   void **reply,
@@ -608,7 +583,7 @@ static int allCommand
   for (iter = cmdq; iter; iter = iter->next)
   {
     edgex_event_cooked *ereply = NULL;
-    retOne = runOne (svc, iter->dev, iter->cmd, querystr, upload_data, upload_data_size, &ereply);
+    retOne = runOne (svc, iter->dev, iter->cmd, qparams, upload_data, upload_data_size, &ereply);
     edgex_device_release (iter->dev);
     if (ereply)
     {
@@ -683,7 +658,7 @@ static int oneCommand
   bool byName,
   const char *cmd,
   edgex_http_method method,
-  const char *querystr,
+  const edgex_nvpairs *qparams,
   const char *upload_data,
   size_t upload_data_size,
   void **reply,
@@ -721,7 +696,7 @@ static int oneCommand
   {
     edgex_event_cooked *ereply = NULL;
     result = runOne
-      (svc, dev, command, querystr, upload_data, upload_data_size, &ereply);
+      (svc, dev, command, qparams, upload_data, upload_data_size, &ereply);
     edgex_device_release (dev);
     if (ereply)
     {
@@ -774,7 +749,7 @@ int edgex_device_handler_device
 (
   void *ctx,
   char *url,
-  char *querystr,
+  const edgex_nvpairs *qparams,
   edgex_http_method method,
   const char *upload_data,
   size_t upload_data_size,
@@ -798,7 +773,7 @@ int edgex_device_handler_device
       cmd = url + 4;
       if (strlen (cmd))
       {
-        result = allCommand (svc, cmd, method, querystr, upload_data, upload_data_size, reply, reply_size, reply_type);
+        result = allCommand (svc, cmd, method, qparams, upload_data, upload_data_size, reply, reply_size, reply_type);
       }
       else
       {
@@ -822,7 +797,7 @@ int edgex_device_handler_device
       {
          *cmd = '\0';
          result = oneCommand
-           (svc, url, byName, cmd + 1, method, querystr, upload_data, upload_data_size, reply, reply_size, reply_type);
+           (svc, url, byName, cmd + 1, method, qparams, upload_data, upload_data_size, reply, reply_size, reply_type);
          *cmd = '/';
       }
     }
