@@ -44,7 +44,8 @@ static bool random_get_handler
   const edgex_protocols *protocols,
   uint32_t nreadings,
   const edgex_device_commandrequest *requests,
-  edgex_device_commandresult *readings
+  edgex_device_commandresult *readings,
+  const edgex_nvpairs *qparams
 )
 {
   random_driver *driver = (random_driver *) impl;
