@@ -100,7 +100,8 @@ static bool terminal_get_handler
   const edgex_protocols *protocols,
   uint32_t nreadings,
   const edgex_device_commandrequest *requests,
-  edgex_device_commandresult *readings
+  edgex_device_commandresult *readings,
+  const edgex_nvpairs *qparams
 )
 {
   terminal_driver *driver = (terminal_driver *)impl;
